tests/parser/statement_read_err4.expected
Syntax Error: line 3:
Unexpected token (TOK_RPAREN, ')'), likely missing a(n)  
  'TOK_LPAREN' or
Possibly due to malformed or missing:
  Non-terminal: 'Constant' or
  Non-terminal: 'Expression' or
  Non-terminal: 'Variable'
