tests/parser/statement_read_err4.mtp
begin
	(*read statement*)
	read (something, )

end
.